What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

December 19, 2007
+ [FOD] In mqc.h, changed MQC_NUMCTXS from 32 to 19 as there are only 19 possible contexts

December 10, 2007
+ [FOD] First import of JAVAOpenJPEG, a Java wrapper of OpenJPEG, developed by Patrick Piscaglia of Telemis (www.telemis.com). 
		Thank you Patrick for this new module !

November 29, 2007
! [GB] Added index.h and index.c in VC6 projects; wrapped index.h in the C++ preprocessor; modified OPJViewer project and some files.

November 14, 2007
+ [FOD] Created the file index.c in the codec directory. This file handles the creation of index files, 
		at encoding and decoding. 
* [FOD] Fixed bugs during the creation of the index (PCRL progression order)
* [FOD] Fixed the maximum number of resolutions a user can discard while decoding.
		Added an error state in J2K_STATE (j2k.c)

November 14, 2007
! [FOD] - First Patch by Callum Lerwick. Instead of reinventing realloc, j2k_read_sod now just uses opj_realloc in j2k.c
		- Second Patch by Callum Lerwick. This patch rearranges the largest memory allocations so they're allocated as 
		late as possible, and freed as soon as possible. This cuts memory usage by about half on two large test images.
		- Third Patch by Callum Lerwick. The opj_tcd_cblk array is one of the largest allocations, because it
		contains a bunch of static buffers. This also makes it a major source of cache thrashing. This patch allocates 
		the buffers from the heap, and dynamically sizes them in the decoder. I have not yet managed to dynamically size 
		them in the encoder, getting the decoder to do it was tricky enough... I also split opj_tcd_cblk_t into separate 
		encode and decode versions. A lot of fields were not used by both, so this cuts its size even further.

* [FOD] Avoided ABI breakage

November 13, 2007
! [FOD] Patch by Dzonatas and Callum Lerwick.